--- a/app/views/stores/payment.html.erb
+++ b/app/views/stores/payment.html.erb
@@ -1,40 +1,53 @@
+<div class="flex  justify-center px-4 sm:px-6 lg:px-8">
+  <div class="w-full lg:max-w-[50%] md:max-w-[100%] ">
+    <div class="bg-gray-50">
+      <div class="max-w-9xl mx-auto py-4 px-4 sm:px-6 lg:py-4 lg:px-4 lg:flex lg:items-center lg:justify-between">
+        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:tracking-tight">
+          <span class="block">Pay tax for Store Number <%=@store.serial_number %></span>
+        </h2>
+
+      </div>
+    </div>
+    <div class="mt-5 flex flex-col">
+
+      <%= form_with(model: @payment, class: "contents") do |form| %>
+      <% if @payment.errors.any? %>
+      <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
+        <h2><%= pluralize(@payment.errors.count, "error") %> prohibited this @payment from being saved:</h2>
+
+        <ul>
+          <% @payment.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+      <% end %>
+      <div class="my-5">
+        <%= form.label :tax_id %>
+        <div class="mt-1 rounded-md shadow-sm">
+          <%=form.collection_select :tax_id, Tax.order(:name), :id, :name , class:"bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 w-full" %>
+        </div>
+      </div>
+
+      <%= form.hidden_field :store_id, value:@store.id%>
 
 
+      <div class="my-5">
+        <%= form.label :amount %>
+        <%= form.number_field :amount, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", required: true, placeholder: "Amount"  %>
+      </div>
 
-<%= form_with(model: @payment, class: "contents") do |form| %>
-<% if @payment.errors.any? %>
-<div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-  <h2><%= pluralize(@payment.errors.count, "error") %> prohibited this @payment from being saved:</h2>
 
-  <ul>
-    <% @payment.errors.each do |error| %>
-    <li><%= error.full_message %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
-<div class="my-5">
-  <%= form.label :tax_id %>
-  <div class="mt-1 rounded-md shadow-sm">
-    <%=form.collection_select :tax_id, Tax.order(:name), :id, :name , class:"bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 w-full" %>
+      <div class="my-5">
+        <%= form.label :payee %>
+        <%= form.text_field :payee, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", required: true, placeholder: "Store Owner Name"  %>
+      </div>
+
+      <div class="inline">
+        <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+      </div>
+      <% end %>
+
+    </div>
   </div>
 </div>
-
-<%= form.hidden_field :store_id, value:@store.id%>
-
-
-<div class="my-5">
-  <%= form.label :amount %>
-  <%= form.text_field :amount, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
-</div>
-
-
-<div class="my-5">
-  <%= form.label :payee %>
-  <%= form.text_field :payee, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
-</div>
-
-<div class="inline">
-  <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
-</div>
-<% end %>
