--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -13,6 +13,12 @@
             </div>
           </div>
         </div>
+         <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
+            <div class="ml-3 inline-flex rounded-md shadow">
+              <%= link_to "Taxes List", "#{@store_taxes_path}", class:"inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700" %>
+              <%= link_to "My Payments", "#{@store_payments_path}", class:"inline-flex items-center justify-center px-5 py-3 border border-indigo-600 text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-700 hover:text-white mx-4" %>
+            </div>
+          </div>
       </div>
 
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
