--- a/app/views/stores/payment_list.html.erb
+++ b/app/views/stores/payment_list.html.erb
@@ -6,6 +6,16 @@
           <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:tracking-tight">
             <span class="block">Payment List from store <%=@store.serial_number %></span>
           </h2>
+          <div>
+  <p>
+    Total payment
+    <span class="text-gray-900"><%= @total_payment %></span>
+  </p>
+  <p>
+    Total Tax
+    <span class="text-gray-900"><%= @total_tax %></span>
+  </p>
+</div>
         </div>
       </div>
       <div class="my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
