Calculate arrears, balance and payment complete

--- a/app/views/stores/taxes_list.html.erb
+++ b/app/views/stores/taxes_list.html.erb
@@ -7,7 +7,15 @@
           <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:tracking-tight">
             <span class="block"><%=@store.serial_number %> Taxes List</span>
           </h2>
+           <div>
+
+  <p>
+    Total Tax
+    <span class="text-gray-900"><%= @total_tax %></span>
+  </p>
+</div>
         </div>
+
       </div>
 
       <div class="my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
