--- a/app/views/stores/payment_list.html.erb
+++ b/app/views/stores/payment_list.html.erb
@@ -15,6 +15,18 @@
     Total Tax
     <span class="text-gray-900"><%= @total_tax %></span>
   </p>
+    <p>
+    Arrears
+    <span class="text-gray-900"><%= @arrears %></span>
+  </p>
+  <p>
+    Total Balance
+    <span class="text-gray-900"><%= @balance %></span>
+  </p>
+    <p>
+    Payment Complete
+    <span class="text-gray-900"><%= @payment_complete %></span>
+  </p>
 </div>
         </div>
       </div>
