Update will paginate ui styles

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -60,9 +60,24 @@
                   <% end %>
               </tbody>
             </table>
+
+
           </div>
         </div>
       </div>
+      <div class="text-center my-4">
+        <div role="navigation" aria-label="Pagination"
+          class="px-3 py-2 mx-2 text-gray-700 no-underline bg-white rounded-lg">
+          <div class="flickr_pagination">
+            <div class="">
+              <%= page_entries_info @stores %>
+            </div>
+            <%= will_paginate @stores %>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>
 </div>
