--- a/app/views/taxes/_tax.html.erb
+++ b/app/views/taxes/_tax.html.erb
@@ -15,8 +15,8 @@
   </p>
 
   <p class="my-5">
-    <strong class="block font-medium mb-1">Period:</strong>
-    <%= tax.period %>
+    <strong class="block font-medium mb-1">Year:</strong>
+    <%= tax.year %>
   </p>
 
   <p class="my-5">
