--- a/app/views/taxes/_tax.html.erb
+++ b/app/views/taxes/_tax.html.erb
@@ -14,6 +14,11 @@
     <%= tax.description %>
   </p>
 
+
+    <p class="my-5">
+    <strong class="block font-medium mb-1">Store Number:</strong>
+    <%= tax.store.serial_number %>
+  </p>
   <p class="my-5">
     <strong class="block font-medium mb-1">Year:</strong>
     <%= tax.year %>
