--- a/app/views/stores/payment.html.erb
+++ b/app/views/stores/payment.html.erb
@@ -25,7 +25,7 @@
       <div class="my-5">
         <%= form.label :tax_id %>
         <div class="mt-1 rounded-md shadow-sm">
-          <%=form.collection_select :tax_id, Tax.order(:name), :id, :name , class:"bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 w-full" %>
+          <%=form.collection_select :tax_id, Tax.where(store_id: params[:id]).order(created_at: :desc), :id, :name , class:"bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 w-full" %>
         </div>
       </div>
 
