--- a/app/views/stores/tax.html.erb
+++ b/app/views/stores/tax.html.erb
@@ -9,13 +9,13 @@
 
       </div>
     </div>
-    <%= form_with(model: @store_tax, class: "contents") do |form| %>
-    <% if @store_tax.errors.any? %>
+    <%= form_with(model: @tax, class: "contents") do |form| %>
+    <% if @tax.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-      <h2><%= pluralize(@store_tax.errors.count, "error") %> prohibited this store_tax from being saved:</h2>
+      <h2><%= pluralize(@tax.errors.count, "error") %> prohibited this tax from being saved:</h2>
 
       <ul>
-        <% @store_tax.errors.each do |error| %>
+        <% @tax.errors.each do |error| %>
         <li><%= error.full_message %></li>
         <% end %>
       </ul>
@@ -23,15 +23,29 @@
     <% end %>
 
     <%= form.hidden_field :store_id, value:@store.id%>
-    <div class="my-5">
-      <%= form.label :tax_id %>
-      <div class="mt-1 rounded-md shadow-sm">
-        <%=form.collection_select :tax_id, Tax.order(created_at: :desc), :id, :name , class:"bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full py-3 px-5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 w-full" %>
-      </div>
-    </div>
 
+
+  <div class="my-5">
+    <%= form.label "Tax Title " %>
+    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", required: true %>
+  </div>
+
+  <div class="my-5">
+    <%= form.label "Detail Description of tax" %>
+    <%= form.text_field :description, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", required: true %>
+  </div>
+
+  <div class="my-5">
+    <%= form.label :amount %>
+    <%= form.number_field :amount, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", required: true %>
+  </div>
+
+    <div class="my-5">
+    <%= form.label :year %>
+    <%= form.number_field :year, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", required: true %>
+  </div>
     <div class="inline">
-      <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+      <%= form.submit "Add tax to Number #{@store.serial_number}", class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
     </div>
     <% end %>
 
