--- a/app/views/taxes/index.html.erb
+++ b/app/views/taxes/index.html.erb
@@ -1,14 +1,72 @@
-<div class="w-full">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-  <% end %>
 
-  <!-- <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Taxes</h1>
-    <%= link_to 'New tax', new_tax_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
-  </div> -->
+<div class="flex  justify-center px-4 sm:px-6 lg:px-8">
+  <div class="w-full lg:max-w-[90%] md:max-w-[100%] ">
 
-  <div id="taxes" class="min-w-full">
-    <%= render @taxes %>
+
+    <div class="mt-5 flex flex-col">
+
+      <div class="bg-gray-50">
+        <div class="max-w-9xl mx-auto py-4 px-4 sm:px-6 lg:py-4 lg:px-4 lg:flex lg:items-center lg:justify-between">
+          <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:tracking-tight">
+            <span class="block">Tax List</span>
+          </h2>
+        </div>
+      </div>
+
+      <div class="my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+        <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8">
+          <div class="border-b shadow md:custom-box-shadow overflow-hidden border-gray-200">
+            <table class="divide-y min-w-full divide-gray-200">
+              <thead>
+                <tr>
+                  <th class="w-1">#</th>
+                  <th
+                    class="bg-gray-50 px-6 py-3 text-left text-lg font-bold leading-4 tracking-wider text-bb-gray-600 text-opacity-50">
+                    Tax Name
+                  </th>
+                  <th
+                    class="bg-gray-50 px-6 py-3 text-left text-lg font-bold leading-4 tracking-wider text-bb-gray-600 text-opacity-50">
+                    Digital Address
+                  </th>
+                  <th
+                    class="bg-gray-50 px-6 py-3 text-left text-lg font-bold leading-4 tracking-wider text-bb-gray-600 text-opacity-50">
+                    Store Number
+                  </th>
+                  <th
+                    class="bg-gray-50 px-6 py-3 text-left text-lg font-bold leading-4 tracking-wider text-bb-gray-600 text-opacity-50">
+                    Tax Amount
+                  </th>
+                  <th class="w-3"></th>
+                  <th class="w-3"></th>
+                </tr>
+              </thead>
+              <tbody class="divide-y divide-gray-200 bg-white">
+                <% @taxes.each_with_index do |tax, index| %>
+                <tr>
+                  <td class="whitespace-no-wrap px-6 py-4 text-lg font-medium leading-5 text-bb-gray-600">
+                    <%= index + 1 %></td>
+                  <td class="whitespace-no-wrap px-6 py-4 text-lg font-medium leading-5 text-bb-gray-600">
+                    <%= tax.name %>
+
+                  </td>
+                  <td class="whitespace-no-wrap px-6 py-4 text-lg font-medium leading-5 text-bb-gray-600">
+                    <%= tax.store.digital_address %>
+                  </td>
+                  <td class="whitespace-no-wrap px-6 py-4 text-lg font-medium leading-5 text-bb-gray-600">
+                    <%= tax.store.serial_number %>
+                  </td>
+                  <td class="whitespace-no-wrap px-6 py-4 text-lg font-medium leading-5 text-bb-gray-600">
+                    <%= tax.amount %>
+                  </td>
+
+                  <td class="px-6 text-left  py-4"><%= link_to 'Show', tax %></td>
+                  <td class="px-6 text-left py-4"><%= link_to 'Edit', edit_tax_path(tax) %></td>
+                  <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
