--- a/app/views/taxes/index.html.erb
+++ b/app/views/taxes/index.html.erb
@@ -10,6 +10,9 @@
           <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:tracking-tight">
             <span class="block">Tax List</span>
           </h2>
+          <p>
+            Total Tax: <%= @total_tax %>
+          </p>
         </div>
       </div>
 
