--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -9,7 +9,23 @@
           <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:tracking-tight">
             <span class="block">Payment List</span>
           </h2>
+        <div>
+           <p>
+            Total Tax: <%= @total_tax %>
+          </p>
+           <p>
+            Total Payment: <%= @total_payment %>
+          </p>
+                     <p>
+            Total Arrears: <%= @total_arrears %>
+          </p>
+                               <p>
+            Total Balance: <%= @total_balance %>
+          </p>
         </div>
+        </div>
+
+
       </div>
 
       <div class="my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
