--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <section class="bg-white items-center justify-center ">
   <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
     <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">Welcome
-      to Offinso Municipal Stores Data Collection App</h1>
+      to Municipal Stores Data Collection App</h1>
     <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">Lorem, ipsum dolor
       sit amet consectetur adipisicing elit. Similique, dolor quo! Fugiat quia quasi ad ipsam eligendi omnis corporis
       aliquam voluptatibus? Accusantium itaque est laudantium et quo ratione earum magni?</p>
