--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl px-4 md:px-6 py-2.5">
     <a href="/" class="flex items-center">
       <img src="https://flowbite.com/docs/images/logo.svg" class="mr-3 h-6 sm:h-9" alt="Logo">
-      <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Offinso Municipal</span>
+      <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Nana Ama App</span>
     </a>
 
     <% if current_user %>
