--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -70,7 +70,7 @@
         <li> <%= link_to "Stores", stores_path,  class:"text-gray-900 dark:text-white hover:underline" %></li>
         <li> <%= link_to "Communities", communities_path,  class:"text-gray-900 dark:text-white hover:underline" %></li>
         <li> <%= link_to "Tax List", taxes_path,  class:"text-gray-900 dark:text-white hover:underline" %></li>
-        <li> <%= link_to "Sub Districts", sub_districts_path,  class:"text-gray-900 dark:text-white hover:underline" %>
+        <!-- <li> <%= link_to "Sub Districts", sub_districts_path,  class:"text-gray-900 dark:text-white hover:underline" %> -->
         </li>
         <li> <%= link_to "Payments", payments_path,  class:"text-gray-900 dark:text-white hover:underline" %></li>
         <% if can? :manage, :all %>
