--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -27,7 +27,7 @@
           <div class="w-full px-3">
             <%= form.label :role, class:"block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
             <div class="relative">
-              <%= form.select :role, [["Select Role of Permission For User", ""], ["User", "user"], ["Tax Collector", "collector"],["Admin", "admin"], ["IT", "it"], ["Statistics", "statistics"], ["Super Admin", "super_admin"]], class:"block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"%>
+              <%= form.select :role, [["Select Role of Permission For User", ""], ["User", "user"], ["Tax Collector", "collector"],["Admin", "admin"], ["IT", "it"], ["Statistics", "statistics"], ["Super Admin", "super_admin"]] ,{}, { "class" => "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full py-3 px-5 " }%>
             </div>
           </div>
 
